--- a/seata-demo-bank1/pom.xml
+++ b/seata-demo-bank1/pom.xml
@@ -75,6 +75,17 @@
             <artifactId>spring-cloud-alibaba-seata</artifactId>
             <version>2.2.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix-hystrix</artifactId>
+            <version>2.2.6.RELEASE</version>
+        </dependency>
 
     </dependencies>
     <dependencyManagement>
