--- a/seata-demo-bank1/src/main/resources/application.yml
+++ b/seata-demo-bank1/src/main/resources/application.yml
@@ -32,3 +32,9 @@ eureka:
     fetch-registry: true #获取注册实例列表
     service-url:
       defaultZone: http://localhost:8001/eureka/ #配置注册中心地址
+feign:
+  hystrix:
+    enabled: false
+ribbon:
+  eureka:
+    enabled: true
