--- a/Java8Demo/pom.xml
+++ b/Java8Demo/pom.xml
@@ -17,6 +17,11 @@
             <version>4.13</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>5.3.9</version>
+        </dependency>
     </dependencies>
 
 
